// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icons.ts > should render properly > IconArrowDown 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="-2 -5 18 18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1 1 5.326 5.7a.909.909 0 0 0 1.348 0L13 1"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconCheck 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      fill="none"
      viewBox="-2 -4 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 5.917 5.724 10.5 15 1.5"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconClose 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="-2 -2 18 18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconError 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m13 7-6 6m0-6 6 6m6-3a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconInfo 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 9h2v5m-2 0h4M9.408 5.5h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconPlus 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="-2 -2 22 22"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 1v16M1 9h16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconSuccess 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m7 10 2 2 4-4m6 2a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Icons.ts > should render properly > IconWarning 1`] = `
<div>
  <div
    class="_icon_295c81 _primary_295c81"
  >
    <svg
      aria-hidden="true"
      fill="none"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;
